# saorsa-tui

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/fae-agent/: Cargo.toml  README.md
crates/fae-agent/src/: agent.rs  config.rs  error.rs  event.rs  lib.rs  tool.rs
crates/fae-agent/src/context/: agents.rs  compaction.rs  discovery.rs  mod.rs  system.rs  types.rs
crates/fae-agent/src/extension/: command_registry.rs  keybinding_registry.rs  mod.rs  package_manager.rs  registry.rs  tool_registry.rs  widget_registry.rs
crates/fae-agent/src/session/: autosave.rs  bookmark.rs  branch.rs  export.rs  mod.rs  path.rs  resume.rs  storage.rs  tree.rs  types.rs
crates/fae-agent/src/skills/: registry.rs
crates/fae-agent/src/templates/: engine.rs  mod.rs
crates/fae-agent/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
crates/fae-agent/tests/: integration_tools.rs  tool_integration.rs
crates/fae-ai/: Cargo.toml
crates/fae-ai/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  message.rs  models.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  tokens.rs  types.rs
crates/fae-ai/tests/: integration_provider.rs  integration_tests.rs
crates/fae-app/: Cargo.toml
crates/fae-app/src/: app.rs  autocomplete.rs  cli.rs  input.rs  keybindings.rs  lib.rs  main.rs  operating_mode.rs  ui.rs
crates/fae-app/src/commands/: bookmark.rs  export.rs  fork.rs  mod.rs  model.rs  settings.rs  share.rs  thinking.rs  tree.rs
crates/fae-app/src/widgets/: message_queue.rs  mod.rs  model_selector.rs  settings_screen.rs
crates/fae-app/tests/: integration_test.rs
crates/fae-cli/: Cargo.toml
crates/fae-cli/src/: main.rs
crates/fae-core/: Cargo.toml
crates/fae-core/benches/: css_parsing.rs  layout.rs  rendering.rs
crates/fae-core/src/: buffer.rs  cell.rs  color.rs  cursor.rs  error.rs  event.rs  layout.rs  lib.rs  overlay.rs  render_context.rs  renderer.rs  segment.rs  terminal.rs  text.rs  viewport.rs  wrap.rs
crates/fae-core/src/compositor/: chop.rs  compose.rs  cuts.rs  layer.rs  mod.rs
crates/fae-core/src/layout/: engine.rs  scroll.rs  style_converter.rs
crates/fae-core/src/reactive/: binding.rs  computed.rs  context.rs  effect.rs  mod.rs  scope.rs
crates/fae-core/src/tcss/: ast.rs  cache.rs  cascade.rs  error.rs  matcher.rs  mod.rs  parser.rs  property.rs  reload.rs  selector.rs  theme.rs  tree.rs  value.rs  variable.rs
crates/fae-core/src/terminal/: crossterm_backend.rs  multiplexer.rs  profiles.rs  query.rs  test_backend.rs  traits.rs
crates/fae-core/src/widget/: container.rs  data_table.rs  diff_view.rs  directory_tree.rs  form_controls.rs  label.rs  mod.rs  modal.rs  option_list.rs  rich_log.rs  select_list.rs  sparkline.rs  static_widget.rs  text_area.rs  toast.rs  tooltip.rs  tree.rs
crates/fae-core/tests/: ci_integration.rs  proptest_css.rs  proptest_layout.proptest-regressions  proptest_layout.rs  snapshot_basic.rs  snapshot_data_widgets.rs  snapshot_helpers.rs  snapshot_text_widgets.rs  snapshot_ui_widgets.rs  terminal_compat.rs  terminal_integration.rs  theme_integration.rs
crates/fae-core/tests/snapshots/: snapshot_basic__container_empty.snap  snapshot_basic__label_long.snap  snapshot_basic__label_short.snap  snapshot_basic__static_widget.snap  snapshot_data_widgets__datatable_basic.snap  snapshot_data_widgets__datatable_empty.snap  snapshot_data_widgets__datatable_with_selection.snap  snapshot_data_widgets__diffview_additions.snap  snapshot_data_widgets__diffview_deletions.snap  snapshot_data_widgets__diffview_unified.snap  snapshot_data_widgets__richlog_empty.snap  snapshot_data_widgets__richlog_styled_entries.snap  snapshot_data_widgets__richlog_with_entries.snap  snapshot_data_widgets__selectlist_items.snap  snapshot_data_widgets__selectlist_with_selection.snap  snapshot_data_widgets__tree_collapsed.snap  snapshot_data_widgets__tree_expanded.snap  snapshot_data_widgets__tree_nested.snap  snapshot_text_widgets__markdown_bold_italic.snap  snapshot_text_widgets__markdown_code_block.snap  snapshot_text_widgets__markdown_heading.snap  snapshot_text_widgets__markdown_link.snap  snapshot_text_widgets__markdown_list.snap  snapshot_text_widgets__markdown_mixed.snap  snapshot_text_widgets__textarea_cursor.snap  snapshot_text_widgets__textarea_empty.snap  snapshot_text_widgets__textarea_line_numbers.snap  snapshot_text_widgets__textarea_multiline.snap  snapshot_text_widgets__textarea_single_line.snap  snapshot_text_widgets__textarea_word_wrap.snap  snapshot_ui_widgets__checkbox_checked.snap  snapshot_ui_widgets__checkbox_unchecked.snap  snapshot_ui_widgets__collapsible_collapsed.snap  (+20 more)
crates/saorsa/: Cargo.toml  README.md  saorsa.tcss
crates/saorsa-agent/: Cargo.toml  README.md
crates/saorsa-agent/src/: agent.rs  config.rs  cost.rs  error.rs  event.rs  lib.rs  tool.rs
crates/saorsa-agent/src/config/: auth.rs  (+5 more)
crates/saorsa-agent/tests/: integration_tools.rs  mistralrs_inprocess_smoke.rs  tool_integration.rs
crates/saorsa-ai/: Cargo.toml  README.md
crates/saorsa-ai/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  message.rs  mistralrs.rs  models.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  tokens.rs  types.rs
crates/saorsa-ai/tests/: integration_provider.rs
crates/saorsa-cli/: Cargo.toml  README.md
crates/saorsa-cli/src/: main.rs
crates/saorsa-core/: Cargo.toml  README.md
crates/saorsa-core/benches/: css_parsing.rs  layout.rs  rendering.rs
crates/saorsa-core/src/: error.rs  focus.rs  lib.rs  renderer.rs  style.rs  terminal.rs  text.rs  text_buffer.rs  undo.rs
crates/saorsa-core/tests/: ci_integration.rs  proptest_css.rs  proptest_layout.rs  snapshot_basic.rs  snapshot_data_widgets.rs  snapshot_helpers.rs  snapshot_text_widgets.rs  snapshot_ui_widgets.rs  terminal_compat.rs  terminal_integration.rs  theme_integration.rs
crates/saorsa/src/: app.rs  autocomplete.rs  cli.rs  input.rs  lib.rs  main.rs  render_throttle.rs  tui_runtime.rs  ui.rs
crates/saorsa/tests/: integration_test.rs  render_throttle_integration.rs  tui_runtime_manual_hooks.rs
(+330 files in other folders)
