[workspace]
resolver = "2"
members = [
    "crates/fae-core",
    "crates/fae-ai",
    "crates/fae-agent",
    "crates/fae-app",
    "crates/fae-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["David Irvine <david@saorsalabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/saorsa-labs/fae"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal
crossterm = { version = "0.28", features = ["event-stream"] }

# CSS parsing
cssparser = "0.34"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# File watching
notify = "7"

# Layout engine
taffy = "0.7"

# Text editing
ropey = "1.6"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Testing
tempfile = "3"

# Markdown parsing
pulldown-cmark = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
fae-core = { path = "crates/fae-core" }
fae-ai = { path = "crates/fae-ai" }
fae-agent = { path = "crates/fae-agent" }
fae-app = { path = "crates/fae-app" }

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 1 }

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 0 }
