[workspace]
resolver = "2"
members = [
    "crates/saorsa-core",
    "crates/saorsa-ai",
    "crates/saorsa-agent",
    "crates/saorsa",
    "crates/saorsa-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["David Irvine <david@saorsalabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/saorsa-labs/saorsa-tui"
rust-version = "1.88"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal
crossterm = { version = "0.28", features = ["event-stream"] }

# CSS parsing
cssparser = "0.34"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# File watching
notify = "7"

# Layout engine
taffy = "0.7"

# Text editing
ropey = "1.6"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Text diffing
similar = "2.6"

# Testing
tempfile = "3"
proptest = "1.5"

# Markdown parsing
pulldown-cmark = "0.12"

# Benchmarking
criterion = "0.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Session management
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
saorsa-core = { version = "0.2.0", path = "crates/saorsa-core" }
saorsa-ai = { version = "0.2.0", path = "crates/saorsa-ai" }
saorsa-agent = { version = "0.2.0", path = "crates/saorsa-agent" }
saorsa = { version = "0.4.0", path = "crates/saorsa" }

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 1 }

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 0 }

# Release profile: optimized for size and speed
[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Profiling profile: release + debug symbols
[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
