[package]
name = "fae-agent"
description = "AI coding agent runtime with tool execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
fae-ai = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
similar = "2.6"
regex = "1.11"
walkdir = "2.5"
globset = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
