[package]
name = "fae-ai"
description = "Unified multi-provider LLM API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
