[package]
name = "fae-cli"
description = "Thin CLI wrapper for fae"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
fae-app = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
