[package]
name = "fae-core"
description = "Retained-mode, CSS-styled terminal UI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
cssparser = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
taffy = { workspace = true }

[lints]
workspace = true
