[package]
name = "saorsa-agent"
description = "AI coding agent runtime with tool execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["agent", "ai", "tools", "coding", "automation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
thiserror = { workspace = true }
saorsa-ai = { workspace = true }
mistralrs = { version = "0.7.0", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
similar = "2.6"
regex = "1.11"
reqwest = { workspace = true }
walkdir = "2.5"
globset = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[features]
default = []
# Forward the in-process mistralrs provider feature to saorsa-ai.
mistralrs = ["saorsa-ai/mistralrs", "dep:mistralrs"]
