[package]
name = "saorsa-cli"
description = "Thin CLI wrapper for saorsa"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tui", "terminal", "cli", "ai", "agent"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
anyhow = { workspace = true }
saorsa = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
