[package]
name = "saorsa-core"
description = "Retained-mode, CSS-styled terminal UI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tui", "terminal", "css", "ui", "widgets"]
categories = ["command-line-interface", "gui"]

[dependencies]
thiserror = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
cssparser = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
taffy = { workspace = true }
ropey = { workspace = true }
pulldown-cmark = { workspace = true }
fuzzy-matcher = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { version = "1", features = ["glob"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "css_parsing"
harness = false

[lints]
workspace = true
