[package]
name = "saorsa"
description = "AI coding agent TUI application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tui", "ai", "agent", "coding", "terminal"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
anyhow = { workspace = true }
saorsa-core = { workspace = true }
saorsa-ai = { workspace = true }
saorsa-agent = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fuzzy-matcher = "0.3"

[lints]
workspace = true
