[package]
name = "saorsa"
description = "AI coding agent TUI application"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tui", "ai", "agent", "coding", "terminal"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
anyhow = { workspace = true }
saorsa-tui = { workspace = true }
saorsa-ai = { workspace = true }
saorsa-agent = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fuzzy-matcher = "0.3"
mistralrs = { version = "0.7.0", optional = true }

[features]
# Default to the "full" app build (includes in-process local inference).
# You can still build a smaller binary via `--no-default-features`.
default = ["mistralrs"]
# Enable in-process local inference via `mistralrs` (GGUF), forwarding the feature to saorsa-ai/saorsa-agent.
mistralrs = ["saorsa-ai/mistralrs", "saorsa-agent/mistralrs", "dep:mistralrs"]

[lints]
workspace = true
